--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,11 @@
 {
-  "name": "Cypress Recorder",
-  "version": "0.5.0",
+  "name": "Cypress Scenario Recorder",
+  "version": "0.0.2",
   "manifest_version": 2,
   "description": "A Chrome extension for recording browser interaction and generating Cypress scripts",
   "permissions": [
     "storage",
     "webNavigation",
-    "tabs",
 	"activeTab",
     "*://*/"
   ],
