--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-recorder",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A Chrome extension for recording browser interaction and generating Cypress scripts",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "NODE_ENV=production webpack",
     "dist": "NODE_ENV=production webpack && node scripts/zip.js",
     "test": "npm run unit-test && npm run e2e-test",
-    "test-prod": "NODE_ENV=production npm run unit-test && npm run e2e-test",
+    "test-prod": "npm run unit-test && npm run e2e-test",
     "unit-test": "jest __tests__/.*.spec.js --silent",
     "e2e-test": "jest __e2e-tests__ --runInBand --silent",
     "lint": "eslint --quiet -f codeframe src"
