--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Chrome extension for recording browser interaction and generating Cypress scripts",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development DEBUG=puppeteer-recorder:* webpack --watch",
-    "build": "NODE_ENV=production webpack",
-    "dist": "NODE_ENV=production webpack && node scripts/zip.js",
+    "dev": "cross-env NODE_ENV=development DEBUG=puppeteer-recorder:* webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
+    "dist": "cross-env NODE_ENV=production webpack && node scripts/zip.js",
     "test": "npm run unit-test && npm run e2e-test",
     "test-prod": "npm run unit-test && npm run e2e-test",
     "unit-test": "jest __tests__/.*.spec.js --silent",
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^7.0.2",
     "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "eslint-config-standard": "^12.0.0-alpha.0",
